src/style/Base.css
/* ... */
.account-wrapper ul li:last-child {
    border-top-right-radius: 6px;
    border-bottom-right-radius: 6px;
}

.accountMenuItem .Icon-normal {
    font-size: 16px;
    color: #4d4d4d;
}

.bugdet-wrapper {
    background: #ffffff;
    border: 1px solid #e6e6e6;
    border-radius: 6px;
    box-shadow: 0 1px 2px 0 rgb(0 0 0 / 12%);
    /* margin-bottom: 24px; */
    /* width: 33.3%; */
}

.budgetEquationContainer-header {
    padding: 12px;
    padding-bottom: 0;
    position: relative;
    display: flex;
    align-items: center;
    margin-bottom: 12px;
}

.budgetEquationContainer-header-icon {
    margin-right: 12px;
    cursor: pointer;
}

.budgetEquationContainer-header .Heading {
    margin: 6px 0;
    font-size: 14px;
    line-height: 17.5px;
    font-weight: bold;
}

.budgetEquation-data-item {
    display: flex;
    align-items: center;
    justify-content: space-between;
    border-radius: 6px;
    margin-bottom: 12px;
}

.text {
    font-size: 14px;
    line-height: 21px;
    vertical-align: middle;
}

.bold {
    font-weight: bold;
}

.budgetEquationContainer-data {
    padding: 0 12px;
    margin-bottom: 12px;
}

.budgetEquation-item-left,
.budgetEquation-item-right {
    padding: 16px 12px;
}

.budgetEquation-data-item:hover,
.budgetEquation-data-item.active {
    background-color: #b1d3d5b3;
}

.budgetEquation-data-item:hover .content,
.budgetEquation-data-item.active .content {
    color: #1c242c;
    font-size: 16px;
}

.budgetEquation-data-item:hover .text,
.budgetEquation-data-item.active .text {
    color: #1c242c;
    font-size: 16px;
}

.budgetEquationContainer-header-title h3 {
    font-size: 14px;
    color: #1c242c;
}

.budgetEquationContainer-select select {
    border-radius: 0;
    border: none;
    color: #566B76;
    font-size: 12px;
}

.budgetEquationContainer-select select:focus-visible,
.budgetEquationContainer-select select:hover {
    border-radius: 0;
    border: none;
    outline: none;
    border-bottom: 1px solid #000;
}
.align-right{
    align-items: flex-end;
    
}

/* CarouselNew start */
.carousel-wrapper .carousel-child {
    background-color: #f1f1f1;
    padding: 20px;
    border: 1px solid #D8D8D8 !important;
}

.carousel .control-arrow,
.carousel.carousel-slider .control-arrow {
    opacity: 1;
}

.carousel-wrapper .carousel .control-dots .dot {
    background: #2c888c;
}

.carousel-status {
    display: none;
}

.carousel-wrapper .carousel .control-dots .dot.selected {
    width: 30px;
    border-radius: 20px;
    box-shadow: none;
}

.carousel-wrapper .carousel.carousel-slider {
    overflow: visible;
}

.carousel-wrapper .carousel .control-dots {
    bottom: -46px;
}

.carousel .control-next.control-arrow:before {
    border-left: 8px solid #1c242c !important;
}

.carousel .control-prev.control-arrow:before {
    border-right: 8px solid #1c242c !important;
}

.carousel-wrapper {
    margin-bottom: 50px;
}

.arrow-icon svg {
    width: 14px;
}

.account-wrapper ul li:hover {
    background: #F4F4F0;
}

.account-top-bar {
    background-color: #F4F4F0;
    padding: 10px 26px;
    margin-bottom: 60px;
}

.budget-container {
    background-color: #F4F4F0;
    padding: 10px;
}

.budget-detail-wrap {
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
}

.budget-detail-wrap .budget-flex {
    flex: 0 0 29%;
}

.unpaid-bill-wrap {
    font-size: 18px;
    text-align: center;
    padding: 20px 10px;
    display: flex;
    align-items: center;
    flex-direction: row;
    /* margin-top: 52px; */
    justify-content: center;
    border: 10px solid #F4F4F0;
    
}

.expeses-wrapper {
    background-color: #fff;
    padding: 0 18px;
}

.merchants-wrap {
    display: flex;
    justify-content: space-between;
    margin: 40px 0px;
}


.merchants-left {
    width: 50%;
}

.bubble-chart-container .bubble-chart-text .bubble-label.medium {
    font-size: 12px;
    color: #fff;
    word-break: break-word;
}

.bubble-chart-container .bubble-chart-text .bubble-label.small {
    font-size: 12px;
    color: #fff;
    text-transform: lowercase;
    line-height: 13px;
}

/* bills number  */
.bill-number-text {
    border: 2px solid #2c888c;
    border-radius: 50%;
    height: 70px;
    width: 70px;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 40px;
    color: #2c888c;
    margin-right: 10px;
    font-weight: bold;
}

.bubble-chart-container .bubble-chart-text .bubble-label {
    color: #fff;
    font-size: 14px;
}
/* Expenses by categories */
progress {
    height: 20px;
}

.expeses-wrapper .progress-items {
    font-size: 10px;
}
.merchants-wrapper .progress-items {
    font-size: 10px;
}

.expeses-wrapper .budget-detail-wrap div {
    flex: none;
}

.expeses-wrapper .insights-right {
    padding-top: 4px;
}

/* .merchants-wrapper .progressBar-item-wrap {
    width: auto;
} */

.top-merchants-wrap .barcharts-content {
    padding: 0;
    padding-left: 0;
    margin: 0 auto;
    text-align: center;
}

.merchants-wrapper .progressBar-item {
    font-size: 10px;
}

.merchants-left .progress {
    width: 100%;
}

.merchants-wrapper hr {
    margin: 4px 0px;
    margin-left: 0px;
}

/* hsbar */
.HSBar-container {
    font-size: 12px;
}

.HSbar-heading {
    text-align: left;
    padding: 0px 0px 12px;
    font-size: 16px;
}

.expeses-wrapper progress {
    margin-top: 10px;
}

.merchants-wrapper {
    width: 70%;
}

.merchants-wrapper progress {
    margin-top: 4px;
}
.top-merchants-wrap {
    display: flex;
    align-items: center;
    margin: 14px 0;
}


.bubblegraph-wrapper {
    width: 50%;
    display: flex;
    justify-content: center;
}


.bill-content {
font-size: 14px;
}
.account-wrapper ul li:hover {
    background-color: #f4f4f0;
}
.account-wrapper ul li .arrow-icon svg{
    fill:#706e6e;
}
.toggleBilling .account-wrapper ul li.active .arrow-icon svg{
    fill:#fff;
    transform: rotate(180deg);
}
.toggleBilling .account-wrapper ul li.active {
    background-color: #1c242c;
}
/* ... */

